<resources>
    <string name="app_name">thirtyseconds</string>

    <string name="intro_description">Play 30 seconds in real time with your friends.</string>
    <string name="get_started">Get Started</string>
    <string name="profile">Profile</string>
    <string name="done">Done</string>
    <string name="profile_image">Profile Image</string>
    <string name="username">Username</string>
    <string name="home">Home</string>
    <string name="chat_box_hint">Enter description of word here.</string>
    <string name="chat_box_hint_interpreter">Take a guess</string>
    <string name="chat_box_disabled">The other team is playing. Please wait</string>
    <string name="send_button">Send Button</string>
    <string name="round">Round</string>
    <string name="game_over">Game Over</string>
    <string name="new_game">New Game</string>
    <string name="restart_game">Restart Game</string>

    <string name="error_occurred">Task failed successfully! :(</string>
    <string name="nickname_already_taken">This nickname is already taken</string>
    <string name="photo_uploaded">Profile picture changed</string>
    <string name="tutorial">Tutorial</string>
    <string name="rules_headline">You know the rules. And so do I.</string>

    <string name="time_is_up">Time is Up!</string>
    <string name="descriptor_gave_away_the_answer">Descriptor typed one of the words in the card.
        Their team lost 1 point</string>
    <string name="game_created">You have created a new game. Invite your friends using the code %s</string>
    <string name="bot_announce_descriptor">%s is playing. %s will be describing the words. Time Started</string>
    <string name="bot_announce_scores">%s has %d points. %s has %d points</string>
</resources>
