<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.profile.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        android:theme="@style/ThemeOverlay.ThirtySeconds.AppTheme.Dark"
        app:paddingTopSystemWindowInsets="@{true}">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/profile"
                android:textAppearance="?attr/textAppearanceHeadline5" />
        </androidx.appcompat.widget.Toolbar>

        <ImageView
            android:id="@+id/profileImage"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/circle_profile"
            android:contentDescription="@string/profile_image"
            app:layout_constraintBottom_toTopOf="@+id/guideline8"
            app:layout_constraintEnd_toStartOf="@+id/guideline7"
            app:layout_constraintStart_toStartOf="@+id/guideline6"
            app:layout_constraintTop_toTopOf="@+id/guideline8"
            app:srcCompat="@drawable/ic_person_outline" />

        <Button
            android:id="@+id/btnDone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="32dp"
            android:text="@string/done"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:marginBottomSystemWindowInsets="@{true}" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.15" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.85" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.28" />

        <ImageView
            android:id="@+id/add_placeholder"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:background="@drawable/circle_small"
            android:importantForAccessibility="no"
            app:layout_constraintEnd_toEndOf="@+id/profileImage"
            app:layout_constraintTop_toTopOf="@+id/profileImage"
            app:srcCompat="@drawable/ic_add" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:hint="@string/username"
            android:textColorHint="@color/app_blue_300"
            android:theme="@style/ThemeOverlay.ThirtySeconds.AppTheme"
            app:endIconMode="clear_text"
            app:layout_constraintEnd_toStartOf="@+id/guideline7"
            app:layout_constraintStart_toStartOf="@+id/guideline6"
            app:layout_constraintTop_toBottomOf="@+id/profileImage">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
